--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,12 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "spatie/laravel-package-tools": "^1.4.3",
-        "blade-ui-kit/blade-icons": "^1.0",
-        "illuminate/support": "^8.0|^9.0"
+        "php": "^8.1",",
+        "spatie/laravel-package-tools": "*",
+        "blade-ui-kit/blade-icons": "*",
+        "illuminate/support": "*"
     },
     "require-dev": {
-        "brianium/paratest": "^6.2",
-        "liip/rmt": "^1.6",
-        "nunomaduro/collision": "^5.3",
-        "orchestra/testbench": "^6.15",
-        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
