--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",",
+        "php": ">=8.1",
         "spatie/laravel-package-tools": "*",
         "blade-ui-kit/blade-icons": "*",
         "illuminate/support": "*"
